--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>SonnyProfile | About me</title>
     <link href="style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <h3>
+      Xin chào tôi là Sonny rất vui được gặp mọi người.Đây là trang web của tôi
+    </h3>
+    <div class="container">
+      <img src="avatar.jpg" alt="avatar" />
+      <div class="text">
+        <!-- Giới Thiệu -->
+        <section id="introduction">
+          <b>Họ và tên :</b> Phạm Thái Sơn <br />
+          <b>Năm Sinh:</b> 2007 <br />
+          <b>Quê Quán:</b> Hải Dương <br />
+          <b>Địa chỉ:</b> 91/41 đường số 8,KP9,phường Linh Trung,TP Thủ Đức
+          <br />
+          <b>Công việc hiện tại:</b> Học Sinh
+        </section>
+        <section id="hobby">
+          <b>Sở Thích :</b>
+
+          <ul>
+            <li>Chơi Game</li>
+            <li>Thích thể thao đăc biệt là môn kéo co</li>
+            <li>Thích viết code</li>
+          </ul>
+        </section>
+      </div>
+    </div>
+  </body>
 </html>
