--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h3>
-      Xin chào tôi là Sonny rất vui được gặp mọi người.Đây là trang web của tôi
-    </h3>
     <div class="container">
       <img src="avatar.jpg" alt="avatar" />
       <div class="text">
+        <h4 style="text-align: justify">Thông tin cơ bản</h4>
         <!-- Giới Thiệu -->
         <section id="introduction">
           <b>Họ và tên :</b> Phạm Thái Sơn <br />
           <b>Năm Sinh:</b> 2007 <br />
+          <b>Số điện thoại :</b> 0352268210 <br />
           <b>Quê Quán:</b> Hải Dương <br />
           <b>Địa chỉ:</b> 91/41 đường số 8,KP9,phường Linh Trung,TP Thủ Đức
           <br />
@@ -33,5 +32,29 @@
         </section>
       </div>
     </div>
+    <div class="skill">
+      <h4 style="padding-left: 170px">Kĩ năng của tôi</h4>
+      <ul list-style-type:upper-roman;>
+        <li><b>Lập Trình:</b>Python,CSS,HTML,C++,Javascript</li>
+        <li><b>Quản lý cơ sở dữ liệu:</b> MySQL,HediSQL</li>
+        <li>Kỹ năng giao tiếp và làm việc nhóm</li>
+        <li>Phân tích và giải quyết vấn đề</li>
+      </ul>
+    </div>
+    <div class="social-media">
+      <h4 style="padding-left: 170px">Mạng Xã Hội</h4>
+      <ul class="social-media">
+        <li>
+          <a href="https://www.facebook.com/profile.php?id=100075355985336"
+            >Facebook</a
+          >
+        </li>
+        <li><a href="#">TikTok</a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
+    </div>
+    <footer style="text-align: center">
+      &copy; 2024 SonnyProfile. All rights reserved.
+    </footer>
   </body>
 </html>
