--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="hobby">
           <b>Sở Thích :</b>
 
-          <ul>
+          <ul style="list-style-type: square">
             <li>Chơi Game</li>
             <li>Thích thể thao đăc biệt là môn kéo co</li>
             <li>Thích viết code</li>
@@ -34,7 +34,7 @@
     </div>
     <div class="skill">
       <h4 style="padding-left: 170px">Kĩ năng của tôi</h4>
-      <ul list-style-type:upper-roman;>
+      <ul list-style-type:circle;>
         <li><b>Lập Trình:</b>Python,CSS,HTML,C++,Javascript</li>
         <li><b>Quản lý cơ sở dữ liệu:</b> MySQL,HediSQL</li>
         <li>Kỹ năng giao tiếp và làm việc nhóm</li>
